# org_api_technical_task

./: Dockerfile  README.md  alembic.ini  build.sh  docker-compose.yml  init_database.sh  pyproject.toml  pytest.ini  remove_image.sh  requirements.txt  run.sh  stop.sh  test_run.sh
app/: main.py
app/api/: error_handlers.py
app/api/dependencies/: db.py  logic.py
app/api/endpoints/: create_department.py  create_employee.py  delete_department.py  get_department.py  update_department.py
app/api/schemas/common/: validators.py
app/api/schemas/parameters/: delete_department.py  get_department.py
app/api/schemas/requests/: new_department.py  new_employee.py  update_department.py
app/api/schemas/responses/: department.py  detailed_department.py  employee.py
app/api/versions/: v1.py
app/application/entities/: __init__.py  departments.py  employees.py
app/application/interfaces/: __init__.py  department_repository.py  employee_repository.py
app/application/logic/common/: __init__.py  err.py
app/application/logic/services/: __init__.py  department_service.py  employee_service.py
app/infrastructure/db/core/: sessions.py
app/infrastructure/settings/: constants.py  database_settings.py
app/repositories/: department_repository.py  employee_repository.py
app/repositories/common/: err.py
app_config_example/: db_password
app_config_example/settings/: database_settings.yaml
make_migration/: docker-compose.yml  migrate.sh  temp_link.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/repositories/: test_department_repository.py
(+10 files in other folders)
