[tool.poetry]
package-mode = false

[project]
name = "org-api-technical-task"
version = "0.1.0"
description = ""
authors = [
    {name = "x-r4ve",email = "mr.faust5@yandex.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "deptry (>=0.25.1,<0.26.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "testcontainers[postgresql] (>=4.14.2,<5.0.0)"
]
